# xplatform-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: cmake-multi-platform.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/disabled_workflows/: linux-build.yml  macos-build.yml  windows-build.yml
.github/workflows/: cmake-multi-platform.yml  windows-build.yml
cmake/: clang_format.cmake  configure_metadata.cmake
cmake/compiler/: detector.cmake  gnu_c.cmake  gnu_cxx.cmake  msvc_ccxx.cmake
cmake/utility/: lib_tools.cmake  metadata_tools.cmake  project_tools.cmake
docs/templ/: LICENSE.in  README.md.in
include/xptemp/: main.hpp
lib/: CMakeLists.txt
lib/metadata/: CMakeLists.txt
lib/metadata/templ/: info.h.in  version.h.in
libs/: CMakeLists.txt
libs/metadata/: CMakeLists.txt
libs/metadata/templ/: version.h.in
scripts/: build.bat  build.sh  clang-format.bat  clang-format.sh  configure.bat  configure.sh  workflow.bat  workflow.sh
scripts/cmake/: clang_format.cmake  configure_metadata.cmake  configure_tools.cmake  metadata_tools.cmake
scripts/cmake/compiler/: detector.cmake  llvm_c.cmake  llvm_cxx.cmake
scripts/cmake/linker/: config.cmake
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt
tests/cli/: CMakeLists.txt  dev_exe.cpp  dev_utils.hpp
tests/unit/: CMakeLists.txt
